# gotta-go-fast

./: LICENSE  Main.hs  README.md  details.txt  gotta-go-fast.cabal  stack.yaml  wordWeights.txt
src/: FormatCode.hs  GottaGoFast.hs  Main.hs  UI.hs  WordWrap.hs
