name:                gotta-go-fast
version:             0.1.3.1
synopsis:            A command line utility for practicing typing
description:
  A command line utility for practicing typing and measuring your WPM and accuracy. See the project <https://github.com/hot-leaf-juice/gotta-go-fast/blob/master/README.md README> for details.

category:            Application
author:              Callum Oakley
maintainer:          c.oakley108@gmail.com
homepage:            https://github.com/hot-leaf-juice/gotta-go-fast
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable gotta-go-fast
  hs-source-dirs:      src
  other-modules:       GottaGoFast
                     , UI
                     , FormatCode
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base >=4.9 && <4.11
                     , brick
                     , cmdargs
                     , directory
                     , random
                     , time
                     , vty
  default-language:    Haskell2010
