name:                gotta-go-fast
version:             0.3.0.8
synopsis:            A command line utility for practicing typing
description:
  A command line utility for practicing typing and measuring your WPM and accuracy. See the project <https://github.com/callum-oakley/gotta-go-fast/blob/master/README.md README> for details.

category:            Application
author:              Callum Oakley
maintainer:          hello@callumoakley.net
homepage:            https://github.com/callum-oakley/gotta-go-fast
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  details.txt, wordWeights.txt

executable gotta-go-fast
  hs-source-dirs:      src
  other-modules:       GottaGoFast
                     , UI
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base >=4.7 && <5
                     , brick >= 0.21
                     , word-wrap >= 0.5
                     , text
                     , cmdargs
                     , directory
                     , random
                     , time
                     , vty
                     , split
                     , file-embed
  default-language:    Haskell2010
